<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/localization_category_string"
                        android:icon="@drawable/ic_gps_fixed_black_24dp"
    >

        <SwitchPreference android:title="@string/localization_title_string"

                          android:defaultValue="true"
                          android:key="USE_DEVICE_LOCATION"
                          android:disableDependentsState="true"

        />
        <EditTextPreference android:title="@string/custom_location_title_string"
                            android:dependency="USE_DEVICE_LOCATION"
                            android:key="CUSTOM_LOCATION"
                            app:useSimpleSummaryProvider="true"/>
        >
    </PreferenceCategory>
</PreferenceScreen>