<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.weather.MainActivity"
        android:orientation="vertical"
        android:id="@+id/layout_main">

    <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:fitsSystemWindows="true"
                                                     android:id="@+id/appbar" android:visibility="visible">

        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Actionbar"
                android:id="@+id/toolbar"
        />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         app:layout_anchor="@id/appbar"
                                                         app:layout_anchorGravity="bottom"
                                                         android:layout_gravity="bottom"
                                                         android:elevation="3dp"

    android:id="@+id/tsnackbar"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/content_main"
                                                       app:layout_anchor="@id/appbar"
                                                       app:layout_anchorGravity="bottom"
                                                       android:layout_gravity="bottom"
    >
        <androidx.constraintlayout.widget.Group android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/txt_info"
                                                app:constraint_referenced_ids="txt_pressure_text,txt_clouds_text,txt_temp_min_text,txt_temp_max_text"
                                                android:visibility="invisible"/>
        <ProgressBar android:layout_width="wrap_content"
                     android:id="@+id/progress_bar_main"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:indeterminate="true"
                     tools:visibility="invisible"/>
        <ImageView android:id="@+id/img_weather_icon" android:layout_width="75dp"
                   android:layout_height="75dp"
                   tools:src="@drawable/ic_snow"
                   android:layout_marginTop="32dp"
                   app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintHorizontal_bias="0.5"
                   app:layout_constraintEnd_toStartOf="@+id/txt_temperature"
                   app:layout_constraintHorizontal_chainStyle="spread"/>
        <TextView android:layout_width="wrap_content" android:layout_height="19dp"
                  android:id="@+id/txt_weather_description"
                  tools:text="Deszcz"

                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/img_weather_icon"
                  app:layout_constraintStart_toStartOf="@+id/img_weather_icon"
                  app:layout_constraintEnd_toEndOf="@+id/img_weather_icon"/>
        <TextView
                android:id="@+id/txt_temperature"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                tools:text="23 C"

                app:layout_constraintTop_toTopOf="@+id/img_weather_icon"
                app:layout_constraintStart_toEndOf="@+id/img_weather_icon"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/img_weather_icon"/>
        <TextView
                android:id="@+id/txt_temperature_min"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="-12 C"
                app:layout_constraintTop_toTopOf="@+id/txt_temp_min_text"
                app:layout_constraintStart_toStartOf="@+id/txt_temperature_max"
                app:layout_constraintEnd_toEndOf="@+id/txt_temperature_max"
                app:layout_constraintBottom_toBottomOf="@+id/txt_temp_min_text"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/txt_temperature_max" tools:text="37 C"

                  style="@style/TextAppearance.MaterialComponents.Body1"
                  app:layout_constraintTop_toTopOf="@+id/txt_temp_max_text"
                  app:layout_constraintStart_toEndOf="@+id/txt_temp_max_text" android:layout_marginStart="8dp"
                  app:layout_constraintBottom_toBottomOf="@+id/txt_temp_max_text"/>

        <TextView
                android:id="@+id/txt_city_name"
                style="@style/TextAppearance.MaterialComponents.Headline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Katowice"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pressure_text"
                android:id="@+id/txt_pressure_text" tools:text="@string/pressure_text"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintBottom_toBottomOf="@+id/txt_temp_min_text"
                app:layout_constraintTop_toTopOf="@+id/txt_temp_min_text"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/clouds_text"
                android:id="@+id/txt_clouds_text" tools:text="@string/clouds_text"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/txt_pressure_text"
                app:layout_constraintBottom_toBottomOf="@+id/txt_temp_max_text"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_temp_max_text" tools:text="@string/temperature_max_text"
                android:text="@string/temperature_max_text"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/txt_temp_min_text"
                app:layout_constraintStart_toStartOf="@+id/txt_temp_min_text"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_temp_min_text" tools:text="@string/temperature_min_text"
                android:text="@string/temperature_min_text"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_city_name" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_pressure"
                style="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="1000 pa"
                app:layout_constraintTop_toTopOf="@+id/txt_pressure_text"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/txt_pressure_text" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/txt_pressure_text"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_clouds"
                style="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="69%"
                app:layout_constraintTop_toTopOf="@+id/txt_clouds_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_clouds_text" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/txt_clouds_text" android:layout_marginEnd="16dp"/>
        <TextView
                android:text="14:00"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:id="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/txt_temperature"
                app:layout_constraintBottom_toBottomOf="@+id/txt_weather_description"
                app:layout_constraintTop_toTopOf="@+id/txt_weather_description"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline"
                                                    app:layout_constraintGuide_begin="205dp"
                                                    android:orientation="vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>